// Vitest Snapshot v1

exports[`Test reporter > addItem 1`] = `
"{
  \\"summary\\": [
    {
      \\"projectName\\": \\"@rehearsal/test\\",
      \\"tsVersion\\": \\"4.7.4\\",
      \\"timestamp\\": \\"9/16/2022, 13:24:57\\",
      \\"basePath\\": \\"/base/path\\",
      \\"entrypoint\\": \\"\\",
      \\"commandName\\": \\"@rehearsal/reporter\\"
    }
  ],
  \\"fixedItemCount\\": 4,
  \\"items\\": [
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS6133\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"'react' is declared but its value is never read.\\",
      \\"hint\\": \\"The declaration 'react' is never read or used. Remove the declaration or use it.\\",
      \\"nodeKind\\": \\"ImportDeclaration\\",
      \\"nodeText\\": \\"import react from 'react';\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 1,
        \\"endLine\\": 1,
        \\"endColumn\\": 12
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS2322\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"Type 'string' is not assignable to type 'number'.\\",
      \\"hint\\": \\"The variable 'a' has type 'number', but 'string' is assigned. Please convert 'string' to 'number' or change variable's type.\\",
      \\"nodeKind\\": \\"Identifier\\",
      \\"nodeText\\": \\"a\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 10,
        \\"endLine\\": 1,
        \\"endColumn\\": 20
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS2345\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"Argument of type '{}' is not assignable to parameter of type 'string'.\\",
      \\"hint\\": \\"Argument of type '{0}' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '({} as string)', or using type guard: 'if ({} instanceof string) { ... }'.\\",
      \\"nodeKind\\": \\"ObjectLiteralExpression\\",
      \\"nodeText\\": \\"{}\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 10,
        \\"endLine\\": 1,
        \\"endColumn\\": 26
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file2.ts\\",
      \\"ruleId\\": \\"@typescript-eslint/no-explicit-any\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 1,
      \\"message\\": \\"Unexpected any. Specify a different type.\\",
      \\"hint\\": \\"Unexpected any. Specify a different type.\\",
      \\"nodeKind\\": \\"TSAnyKeyword\\",
      \\"nodeText\\": \\"\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 1,
        \\"endLine\\": 1,
        \\"endColumn\\": 12
      }
    },
    {
      \\"analysisTarget\\": \\"testFile1.ts\\",
      \\"type\\": 0,
      \\"ruleId\\": \\"TS1000\\",
      \\"category\\": \\"Error\\",
      \\"message\\": \\"unused variable\\",
      \\"hint\\": \\"This is the hint.\\",
      \\"hintAdded\\": true,
      \\"nodeKind\\": 79,
      \\"nodeText\\": \\"var1\\",
      \\"helpUrl\\": \\"\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 3,
        \\"startColumn\\": 7,
        \\"endLine\\": 3,
        \\"endColumn\\": 12
      }
    }
  ]
}"
`;

exports[`Test reporter > getItemsByFile 1`] = `
[
  {
    "analysisTarget": "/base/path/file1.ts",
    "category": "Error",
    "hint": "The declaration 'react' is never read or used. Remove the declaration or use it.",
    "message": "'react' is declared but its value is never read.",
    "nodeKind": "ImportDeclaration",
    "nodeLocation": {
      "endColumn": 12,
      "endLine": 1,
      "startColumn": 1,
      "startLine": 1,
    },
    "nodeText": "import react from 'react';",
    "ruleId": "TS6133",
    "type": 0,
  },
  {
    "analysisTarget": "/base/path/file1.ts",
    "category": "Error",
    "hint": "The variable 'a' has type 'number', but 'string' is assigned. Please convert 'string' to 'number' or change variable's type.",
    "message": "Type 'string' is not assignable to type 'number'.",
    "nodeKind": "Identifier",
    "nodeLocation": {
      "endColumn": 20,
      "endLine": 1,
      "startColumn": 10,
      "startLine": 1,
    },
    "nodeText": "a",
    "ruleId": "TS2322",
    "type": 0,
  },
  {
    "analysisTarget": "/base/path/file1.ts",
    "category": "Error",
    "hint": "Argument of type '{0}' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '({} as string)', or using type guard: 'if ({} instanceof string) { ... }'.",
    "message": "Argument of type '{}' is not assignable to parameter of type 'string'.",
    "nodeKind": "ObjectLiteralExpression",
    "nodeLocation": {
      "endColumn": 26,
      "endLine": 1,
      "startColumn": 10,
      "startLine": 1,
    },
    "nodeText": "{}",
    "ruleId": "TS2345",
    "type": 0,
  },
]
`;

exports[`Test reporter > load 1`] = `
{
  "fixedItemCount": 4,
  "items": [
    {
      "analysisTarget": "/base/path/file1.ts",
      "category": "Error",
      "hint": "The declaration 'react' is never read or used. Remove the declaration or use it.",
      "message": "'react' is declared but its value is never read.",
      "nodeKind": "ImportDeclaration",
      "nodeLocation": {
        "endColumn": 12,
        "endLine": 1,
        "startColumn": 1,
        "startLine": 1,
      },
      "nodeText": "import react from 'react';",
      "ruleId": "TS6133",
      "type": 0,
    },
    {
      "analysisTarget": "/base/path/file1.ts",
      "category": "Error",
      "hint": "The variable 'a' has type 'number', but 'string' is assigned. Please convert 'string' to 'number' or change variable's type.",
      "message": "Type 'string' is not assignable to type 'number'.",
      "nodeKind": "Identifier",
      "nodeLocation": {
        "endColumn": 20,
        "endLine": 1,
        "startColumn": 10,
        "startLine": 1,
      },
      "nodeText": "a",
      "ruleId": "TS2322",
      "type": 0,
    },
    {
      "analysisTarget": "/base/path/file1.ts",
      "category": "Error",
      "hint": "Argument of type '{0}' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '({} as string)', or using type guard: 'if ({} instanceof string) { ... }'.",
      "message": "Argument of type '{}' is not assignable to parameter of type 'string'.",
      "nodeKind": "ObjectLiteralExpression",
      "nodeLocation": {
        "endColumn": 26,
        "endLine": 1,
        "startColumn": 10,
        "startLine": 1,
      },
      "nodeText": "{}",
      "ruleId": "TS2345",
      "type": 0,
    },
    {
      "analysisTarget": "/base/path/file2.ts",
      "category": "Error",
      "hint": "Unexpected any. Specify a different type.",
      "message": "Unexpected any. Specify a different type.",
      "nodeKind": "TSAnyKeyword",
      "nodeLocation": {
        "endColumn": 12,
        "endLine": 1,
        "startColumn": 1,
        "startLine": 1,
      },
      "nodeText": "",
      "ruleId": "@typescript-eslint/no-explicit-any",
      "type": 1,
    },
  ],
  "summary": [
    {
      "basePath": "/base/path",
      "commandName": "@rehearsal/reporter",
      "entrypoint": "",
      "projectName": "@rehearsal/test",
      "timestamp": "9/16/2022, 13:24:57",
      "tsVersion": "4.7.4",
    },
  ],
}
`;

exports[`Test reporter > print, json 1`] = `
"{
  \\"summary\\": [
    {
      \\"projectName\\": \\"@rehearsal/test\\",
      \\"tsVersion\\": \\"4.7.4\\",
      \\"timestamp\\": \\"9/16/2022, 13:24:57\\",
      \\"basePath\\": \\"/base/path\\",
      \\"entrypoint\\": \\"\\",
      \\"commandName\\": \\"@rehearsal/reporter\\"
    }
  ],
  \\"fixedItemCount\\": 4,
  \\"items\\": [
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS6133\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"'react' is declared but its value is never read.\\",
      \\"hint\\": \\"The declaration 'react' is never read or used. Remove the declaration or use it.\\",
      \\"nodeKind\\": \\"ImportDeclaration\\",
      \\"nodeText\\": \\"import react from 'react';\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 1,
        \\"endLine\\": 1,
        \\"endColumn\\": 12
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS2322\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"Type 'string' is not assignable to type 'number'.\\",
      \\"hint\\": \\"The variable 'a' has type 'number', but 'string' is assigned. Please convert 'string' to 'number' or change variable's type.\\",
      \\"nodeKind\\": \\"Identifier\\",
      \\"nodeText\\": \\"a\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 10,
        \\"endLine\\": 1,
        \\"endColumn\\": 20
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS2345\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"Argument of type '{}' is not assignable to parameter of type 'string'.\\",
      \\"hint\\": \\"Argument of type '{0}' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '({} as string)', or using type guard: 'if ({} instanceof string) { ... }'.\\",
      \\"nodeKind\\": \\"ObjectLiteralExpression\\",
      \\"nodeText\\": \\"{}\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 10,
        \\"endLine\\": 1,
        \\"endColumn\\": 26
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file2.ts\\",
      \\"ruleId\\": \\"@typescript-eslint/no-explicit-any\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 1,
      \\"message\\": \\"Unexpected any. Specify a different type.\\",
      \\"hint\\": \\"Unexpected any. Specify a different type.\\",
      \\"nodeKind\\": \\"TSAnyKeyword\\",
      \\"nodeText\\": \\"\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 1,
        \\"endLine\\": 1,
        \\"endColumn\\": 12
      }
    }
  ]
}"
`;

exports[`Test reporter > print, pull-request-md 1`] = `
"### Summary:
Project Name: @rehearsal/test
Typescript Version: 4.7.4
Base path: /base/path
timestamp: 9/16/2022, 13:24:57

### Results:

#### File: /base/path/file1.ts, issues: 3:

**Error TS6133**: 'NEED TO BE FIXED MANUALLY'
The declaration 'react' is never read or used. Remove the declaration or use it.
Code: \`import react from 'react';\`

**Error TS2322**: 'NEED TO BE FIXED MANUALLY'
The variable 'a' has type 'number', but 'string' is assigned. Please convert 'string' to 'number' or change variable's type.
Code: \`a\`

**Error TS2345**: 'NEED TO BE FIXED MANUALLY'
Argument of type '{0}' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '({} as string)', or using type guard: 'if ({} instanceof string) { ... }'.
Code: \`{}\`

#### File: /base/path/file2.ts, issues: 1:

**Error @typescript-eslint/no-explicit-any**: 'NEED TO BE FIXED MANUALLY'
Unexpected any. Specify a different type.
Code: \`\`
"
`;

exports[`Test reporter > save 1`] = `
"{
  \\"summary\\": [
    {
      \\"projectName\\": \\"@rehearsal/test\\",
      \\"tsVersion\\": \\"4.7.4\\",
      \\"timestamp\\": \\"9/16/2022, 13:24:57\\",
      \\"basePath\\": \\"/base/path\\",
      \\"entrypoint\\": \\"\\",
      \\"commandName\\": \\"@rehearsal/reporter\\"
    }
  ],
  \\"fixedItemCount\\": 4,
  \\"items\\": [
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS6133\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"'react' is declared but its value is never read.\\",
      \\"hint\\": \\"The declaration 'react' is never read or used. Remove the declaration or use it.\\",
      \\"nodeKind\\": \\"ImportDeclaration\\",
      \\"nodeText\\": \\"import react from 'react';\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 1,
        \\"endLine\\": 1,
        \\"endColumn\\": 12
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS2322\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"Type 'string' is not assignable to type 'number'.\\",
      \\"hint\\": \\"The variable 'a' has type 'number', but 'string' is assigned. Please convert 'string' to 'number' or change variable's type.\\",
      \\"nodeKind\\": \\"Identifier\\",
      \\"nodeText\\": \\"a\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 10,
        \\"endLine\\": 1,
        \\"endColumn\\": 20
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file1.ts\\",
      \\"ruleId\\": \\"TS2345\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 0,
      \\"message\\": \\"Argument of type '{}' is not assignable to parameter of type 'string'.\\",
      \\"hint\\": \\"Argument of type '{0}' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '({} as string)', or using type guard: 'if ({} instanceof string) { ... }'.\\",
      \\"nodeKind\\": \\"ObjectLiteralExpression\\",
      \\"nodeText\\": \\"{}\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 10,
        \\"endLine\\": 1,
        \\"endColumn\\": 26
      }
    },
    {
      \\"analysisTarget\\": \\"/base/path/file2.ts\\",
      \\"ruleId\\": \\"@typescript-eslint/no-explicit-any\\",
      \\"category\\": \\"Error\\",
      \\"type\\": 1,
      \\"message\\": \\"Unexpected any. Specify a different type.\\",
      \\"hint\\": \\"Unexpected any. Specify a different type.\\",
      \\"nodeKind\\": \\"TSAnyKeyword\\",
      \\"nodeText\\": \\"\\",
      \\"nodeLocation\\": {
        \\"startLine\\": 1,
        \\"startColumn\\": 1,
        \\"endLine\\": 1,
        \\"endColumn\\": 12
      }
    }
  ]
}"
`;
